added functionality to check jar with external javafx libraries, added custom container to workflow